--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/THEBESTol0ch/task-13/issues"
   },
-  "homepage": "https://github.com/THEBESTol0ch/task-13#readme"
+  "homepage": "https://github.com/THEBESTol0ch/task-13#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
